Corrects spacing and coloring for Amazon logo

--- a/css/app.scss
+++ b/css/app.scss
@@ -124,5 +124,11 @@ a {
   &.icon-opto22:hover {
     color: #C52F2E;
   }
+  &.icon-amazon_logo-path1:hover {
+    color: rgb(255, 153, 0);
+  }
+  &.icon-amazon_logo-path2:hover {
+    color: rgb(33, 31, 31);
+  }
 }
 
